# knowledge2-icp

./: .dlc.config.json  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  bakeoff-report.md  bakeoff.csv  branching.json  icp.md  pyproject.toml
.claude/: settings.json
data/: candidates.csv  dossier.md  ranked_companies.csv
docs/: CLOUDFLARE_K2_DEPLOYMENT.md  GEMINI.md  OPERATIONS.md  SCORING.md
examples/: companies.csv
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
icp_engine/: __init__.py  apollo.py  apollo_reveal_check.py  app_store.py  bakeoff.py  claude.py  claude_outreach.py  cli.py  criteria.py  criteria_editor.py  discovery.py  enrichment.py  evals.py  evidence.py  gemini.py  github.py  k2_backend.py  k2_client.py  k2_sync.py  k2_workspace.py  k2_workspace_status.py  metadata.py  mining.py  models.py  outreach.py  outreach_templates.py  perplexity.py  prospects.py  reporting.py  research.py  scoring.py  seed_defaults.py  serialization.py  strategy.py  tenant.py  text.py  web.py
tests/: test_apollo.py  test_apollo_reveal_check.py  test_app_store.py  test_bakeoff.py  test_claude.py  test_claude_outreach.py  test_cli.py  test_cloudflare_config.py  test_cloudflare_worker_runtime.py  test_criteria.py  test_discovery.py  test_enrichment.py  test_evidence.py  test_k2_backend.py  test_k2_client.py  test_k2_sync.py  test_k2_workspace.py  test_metadata.py  test_mining.py  test_outreach.py  test_outreach_templates.py  test_perplexity.py  test_prospects.py  test_research.py  test_web.py  (+6 more)
(+98 files in other folders)
