[project]
name = "knowledge2-icp"
version = "0.1.0"
description = "ICP qualification engine for Knowledge2 incumbent software targets"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
icp = "icp_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["icp_engine"]
