[project]
name = "knowledge2-icp"
version = "0.1.0"
description = "ICP qualification engine for Knowledge2 incumbent software targets"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
claude = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0.0"]
e2e = ["playwright>=1.40.0"]

[project.scripts]
icp = "icp_engine.cli:main"
icp-web = "icp_engine.web:main"
icp-k2-sync = "icp_engine.k2_sync:main"
icp-k2-workspace = "icp_engine.k2_workspace:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["icp_engine"]

[tool.hatch.build.targets.wheel.force-include]
"icp_engine/web_assets" = "icp_engine/web_assets"
